<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back_icon"/>

        <TextView
            android:id="@+id/title_txt"
            android:text="@string/recover_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

            <EditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:maxLines="1" />

        <android.support.design.widget.TextInputLayout
            android:visibility="gone"
            android:id="@+id/otp_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/otp"
                android:inputType="numberPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/secrete_code"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:visibility="gone"
            android:id="@+id/new_password_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/new_password"
                android:inputType="textWebPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:visibility="gone"
            android:id="@+id/confirm_password_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/confirm_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/note"
            android:textColor="@color/black_text_color"
            android:layout_marginTop="20dp"
            android:text="@string/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:gravity="right">
            <ImageView
                android:id="@+id/nextIcon"
                android:src="@drawable/next_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="right"/>
        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

    </ScrollView>

</FrameLayout>