<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tranxitpro.app.Activities.CouponActivity">

    <LinearLayout
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/add_money_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.tranxitpro.app.Utils.MyBoldTextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_coupon_txt"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/coupon_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_coupon"
                android:inputType="textCapCharacters"
                android:layout_marginTop="8dp" />

            <com.tranxitpro.app.Utils.MyButton
                android:id="@+id/apply_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                android:text="APPLY"
                android:textColor="@color/text_color_white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardListViewLayout"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <com.tranxitpro.app.Utils.MyBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/added_coupon"
                android:textColor="@color/black_text_color"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"/>

            <ListView
                android:id="@+id/coupon_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
